@@ -1,4 +1,5 @@
 0.2.0
+Added calendar widget.
 Fixed updating window names in task lists.
 Fixed task bar icons changing position.
 Added right click on task pop up list window to move window to current desktop.
